ElectronicEquipmentAngular/Deployments/deploymentservice.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
   name: mydeployment
spec:
   replicas: 1
   selector:
       matchLabels:
          name: deployment1
   template:
       metadata:
         name: uideployment
         labels:
            name: deployment1
       spec:
          containers:
             - name: angularcontanier
               image: bhasmeht/angular-image
               ports:
                  - containerPort: 80
               imagePullPolicy: Always   


---
apiVersion: v1
kind: Service
metadata:
     name: myangularservice
spec:
   selector:
       name: deployment1
   ports:
     - protocol: "TCP"
       port: 80
       targetPort: 80 
   type: NodePort    

---
kind: Deployment
apiVersion: apps/v1
metadata:
   name: mydeploymenttest
spec:
   replicas: 1
   selector:
       matchLabels:
          name: deployment
   template:
       metadata:
         name: testdeployment
         labels:
            name: deployment
       spec:
          containers:
             - name: testdeployment
               image: nginx
               ports:
                  - containerPort: 80
               imagePullPolicy: Always   


---
apiVersion: v1
kind: Service
metadata:
     name: mytestservice
spec:
   selector:
       name: deployment
   ports:
     - protocol: "TCP"
       port: 80
       targetPort: 80
   type: NodePort    
  

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    ingressclass.kubernetes.io/ingress.class: alb 
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
  - host: mehta.bhaskarmehta.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myangularservice
            port:
              number: 80 
  - host: testmehta.bhaskarmehta.in
    http:  
       paths:          
       - path: /
         pathType: Prefix
         backend:
          service:
            name: mytestservice
            port:
              number: 80
